--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>ShawHui</title>
 </head>
 <body>
-<button>json</button>
-<button onclick="window.href='https://shawhui.github.io/notelite.html'">notelite</button>
+<button onclick="window.location.href='https://shawhui.github.io/json/'">json</button>
+<button onclick="window.location.href='https://shawhui.github.io/notelite.html'">notelite</button>
 
 </body>
 </html>
